2000-04-13  Chema Celorio  <chema@celorio.com>

	* print.c (print_setfont): new function
	finish the printing prefs stuff

2000-04-13  Chema Celorio  <chema@celorio.com>

	* utils.c (gtk_radio_button_select): created, copied
	from gnumeric
	(gtk_radio_group_get_selected): ditto

	* dialogs/dialog-prefs.c : add printing stuff,
	still need to do the print.c part tho

	* dialogs/dialog-search.c (search_dialog_button_cb): if
	not doc is open, return.
	(search_cb): ditto

	* commands.[ch] (about_cb): moved here find_line, replace
	and about callbacks
	
	* menus.c: moved some callbacks to commands.c

	* dialogs/dialog-prefs.c: included "commands.h" and "window.h"
	to kill two compilation warnings.
	(gedit_window_refresh): made non-static since prefs.c is
	calling it.

	* utils.h and utils.c (gedit_debug_mess): added new debug
	enum DEBUG_PREFS and DEBUG_PRINT

	* prefs.c: included #utils for debuging some bugs.

	* undo.c (gedit_undo_do): If no document is active
	dont crash.
	(gedit_undo_redo): ditto
	* commands.c (edit_cut_cb): ditto
	(edit_copy_cb): ditto
	(edit_paste_cb): ditto
	(edit_selall_cb): ditto
	(options_toggle_split_screen_cb): ditto
	(options_toggle_read_only_cb): ditto
	(options_toggle_word_wrap_cb): ditto
	(options_toggle_line_wrap_cb): ditto
	(options_toggle_status_bar_cb): ditto

	* dialogs/dialog-prefs.c (gedit_window_refresh): ditto

	* file.c (file_revert_cb): ditto
	* file.c (file_save_as_cb): ditto

	* print.c (file_print_cb): ditto
	* print.c: added utils.h

	
2000-04-13  Jason Leach  <leach@wam.umd.edu>

	* dialogs/dialog-prefs.c (apply_cb): fixed problems with changes
	to the colors not getting applied and "show statusbar" not working
	correctly.

2000-04-10  Valek Filippov <frob@df.ru>

	* file.c: typo fix

2000-04-09  Chema Celorio  <chema@celorio.com>

	* document.c (gedit_document_real_changed): not used, delete it.
	(gedit_document_marshal): not used, delete it.
	(gedit_add_view): commented out a g_print function ..
