@@ -2,8 +2,6 @@ For the next release:
 
        * Rewrite view.c
        
-       * Rewrite prefs.c
-
        * Add view set tabs NONE       
 
 Anytime:
@@ -14,13 +12,16 @@ Anytime:
 	
 	* Better Line counting
 
-Done :	
-	* Make the full path to files available to the user. (Done)
+Done:
 
-	* Complete GnomeMDI functionality (Done)
+	* Rewrite prefs.c
 
-	* Implement UNDO (Done)
+	* Make the full path to files available to the user.
+
+	* Complete GnomeMDI functionality
+
+	* Implement UNDO
 	
-	* Improved Print (Done)
+	* Improved Print
 	
 	
