@@ -1,3 +1,10 @@
+2000-04-14  Jason Leach  <leach@wam.umd.edu>
+
+	* view.c (gedit_event_button_press): made private
+	(gedit_event_key_press): ditto
+	(view_list_erase): ditto
+	(gedit_event_key_press): fix ALT-F menu accessing again...
+
 2000-04-13  Chema Celorio  <chema@celorio.com>
 
 	* print.c (print_setfont): new function
